<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Home">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar"
        />


    <ImageView
        android:id="@+id/imagem_perfil"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/perfil_provisorio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        android:layout_marginStart="-320dp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/msg_bemvindo"
        android:text="@string/bem_vindo_de_volta"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        android:layout_marginStart="90dp"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/ver_hj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/o_que_gostaria_de_ver_hoje"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toBottomOf="@+id/imagem_perfil"
        android:layout_marginTop="30dp"
        tools:ignore="UnknownId" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/platinha_treino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ver_hj"
        style="@style/button_opcoes"
        android:text="@string/planilhas_de_treino"
        android:drawableStart="@drawable/treino"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/refeicoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/platinha_treino"
        style="@style/button_opcoes"
        android:text="@string/refei_es_sa_daveis"
        android:drawableStart="@drawable/alimentos"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Desempenho"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/refeicoes"
        style="@style/button_opcoes"
        android:text="@string/desempenho"
        android:drawableStart="@drawable/grafico"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/atendimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/Desempenho"
        style="@style/button_opcoes"
        android:text="@string/atendimento_ao_cliente"
        android:drawableStart="@drawable/suporte"
        />




</androidx.constraintlayout.widget.ConstraintLayout>