<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Edicao"
    tools:ignore="ExtraText">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar" />

    <ImageView
        android:id="@+id/btnvoltar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/baseline_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/foto_perfil"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/perfil_provisorio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/info"
        android:layout_width="0dp"
        android:layout_height="430dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/container_components"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foto_perfil" />

    <!-- Aqui começam os campos editáveis -->

    <TextView
        android:id="@+id/perfil_titulo_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/nome"
        android:textColor="@color/white"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="379dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/perfil_titulo_altura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/altura"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/info"
        app:layout_constraintTop_toBottomOf="@+id/perfil_titulo_idade" />

    <EditText
        android:id="@+id/edit_altura"
        android:layout_width="238dp"
        android:layout_height="48dp"
        android:background="@null"
        android:fontFamily="@font/poppins_bold"
        android:hint="@string/altura"
        android:textColor="@color/white"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="132dp"
        tools:layout_editor_absoluteY="490dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/perfil_titulo_objetivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/objetivo"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/info"
        app:layout_constraintTop_toBottomOf="@+id/perfil_titulo_altura" />


    <!-- Adicione campos similares para outros dados do perfil (altura, objetivo, etc.) -->

    <Spinner
        android:id="@+id/spinner_objetivo"
        android:layout_width="238dp"
        android:layout_height="48dp"
        android:background="@null"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/white"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="541dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edit_nome"
        android:layout_width="215dp"
        android:layout_height="48dp"
        android:background="@null"
        android:fontFamily="@font/poppins_bold"
        android:hint="@string/nome"
        android:textColor="@color/white"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="132dp"
        tools:layout_editor_absoluteY="379dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/perfil_titulo_idade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/idade"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/info"
        app:layout_constraintTop_toBottomOf="@+id/edit_nome" />

    <EditText
        android:id="@+id/edit_idade"
        android:layout_width="238dp"
        android:layout_height="48dp"
        android:background="@null"
        android:fontFamily="@font/poppins_bold"
        android:hint="@string/idade"
        android:textColor="@color/white"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="132dp"
        tools:layout_editor_absoluteY="430dp"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/perfil_botao_salvar"
        style="@style/button"
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/salvar"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="645dp"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>
