<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".refeicoes">

    <ImageView
        android:id="@+id/btnvoltar"
        android:src="@drawable/baseline_arrow_back_ios_24"
        android:layout_height="30dp"
        android:layout_width="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/planilha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Planilhas de treino"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_bold"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="10dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/RefeicaoPerderPeso"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:text="@string/perder_peso"
        android:textSize="20sp"
        android:background="@drawable/rato"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_bold"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/planilha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintWidth_percent="0.8" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/RefeicaoManterPeso"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/pao"
        android:fontFamily="@font/poppins_bold"
        android:padding="20dp"
        android:text="@string/manter_peso"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/RefeicaoPerderPeso"
        app:layout_constraintWidth_percent="0.8" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/RefeicaoGanharPeso"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:text="@string/ganhar_peso"
        android:textSize="20dp"
        android:background="@drawable/thaiscarla"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_bold"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/RefeicaoManterPeso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        app:layout_constraintWidth_percent="0.8"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
