<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".suporte">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar" />

    <ImageView
        android:id="@+id/btnvoltar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/baseline_arrow_back_ios_24"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="Fale com nossa equipe de desenvolvimento. ( ͡❛ ͜ʖ ͡❛)"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/container_components"
        app:layout_constraintTop_toBottomOf="@+id/include"

        />

    <TextView
        android:id="@+id/zap"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/edit_text"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/_11_4002_8922"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.69"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <ImageView
        android:id="@+id/image_wpp"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="4dp"
        android:src="@drawable/wpp_image"
        app:layout_constraintEnd_toStartOf="@+id/zap"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <ImageView
        android:id="@+id/image_gmail"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="4dp"
        android:src="@drawable/gmail_image"
        app:layout_constraintEnd_toStartOf="@+id/gmail"
        app:layout_constraintTop_toBottomOf="@+id/image_wpp" />

    <TextView
        android:id="@+id/gmail"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edit_text"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/smartbanha_gmail_com"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toEndOf="@id/view"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintTop_toBottomOf="@+id/zap" />

    <ImageView
        android:id="@+id/image_face"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="4dp"
        android:src="@drawable/face_image"
        app:layout_constraintEnd_toStartOf="@+id/face"
        app:layout_constraintTop_toBottomOf="@+id/image_gmail"
        tools:ignore="UnknownId" />

    <TextView
        android:id="@+id/face"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edit_text"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/smart_banha"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintStart_toEndOf="@id/view"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintTop_toBottomOf="@+id/gmail" />

    <ImageView
        android:id="@+id/image_insta"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/insta_image"
        app:layout_constraintEnd_toStartOf="@+id/insta"
        app:layout_constraintTop_toBottomOf="@+id/image_face"
        tools:ignore="UnknownId" />

    <TextView
        android:id="@+id/insta"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edit_text"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@smartbanha"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/view"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintTop_toBottomOf="@+id/face"
        tools:ignore="UnknownId" />

    <TextView
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/estamos_a_um_clique_de_dist_ncia_fale_conosco_agora_mesmo"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="@+id/view"
        tools:ignore="UnknownId" />


</androidx.constraintlayout.widget.ConstraintLayout>